[gd_scene load_steps=27 format=3 uid="uid://cgh0hydeq3fxq"]

[ext_resource type="Script" path="res://assets/entities/nova/nova.gd" id="1_wapv4"]
[ext_resource type="PackedScene" uid="uid://b85dgg62gt5fc" path="res://assets/entities/nova/arrow.tscn" id="2_1l2sp"]
[ext_resource type="Texture2D" uid="uid://ca8fp0g5bomlc" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_down.png" id="3_a4ka7"]
[ext_resource type="Texture2D" uid="uid://hm76gw007l40" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_down_walk1.png" id="4_f1gha"]
[ext_resource type="Texture2D" uid="uid://dge7bishrebxm" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_down_walk2.png" id="5_47kky"]
[ext_resource type="Texture2D" uid="uid://d1d5pa7hiau7" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_left.png" id="6_6q5y5"]
[ext_resource type="Texture2D" uid="uid://d3gydi68goob4" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_left_walk1.png" id="7_epl3y"]
[ext_resource type="Texture2D" uid="uid://6adfe8ajor8t" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_left_walk2.png" id="8_kmtlt"]
[ext_resource type="Texture2D" uid="uid://bnaue2535b4s2" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_right.png" id="9_td65m"]
[ext_resource type="Texture2D" uid="uid://2l1qaghgmpvf" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_right_walk1.png" id="10_41goi"]
[ext_resource type="Texture2D" uid="uid://dabgmhgk820mo" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_right_walk2.png" id="11_1tirn"]
[ext_resource type="Texture2D" uid="uid://b0dnen2ugjref" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_up.png" id="12_hyiue"]
[ext_resource type="Texture2D" uid="uid://ddw5tvgset0no" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_up_walk1.png" id="13_04tot"]
[ext_resource type="Texture2D" uid="uid://bfgnx6hk6dmbn" path="res://assets/entities/nova/nova_crossbow/nova_crossbow_up_walk2.png" id="14_1qc7q"]
[ext_resource type="Texture2D" uid="uid://d5jq5mxg82pk" path="res://assets/entities/nova/nova_walking/nova_down.png" id="15_wk4q8"]
[ext_resource type="Texture2D" uid="uid://bd8kr5mchmcsy" path="res://assets/entities/nova/nova_walking/nova_down_walk1.png" id="16_8bw50"]
[ext_resource type="Texture2D" uid="uid://dbu0iqc4ub5j2" path="res://assets/entities/nova/nova_walking/nova_down_walk2.png" id="17_wwprg"]
[ext_resource type="Texture2D" uid="uid://d1nuem0hxmsru" path="res://assets/entities/nova/nova_walking/nova_left.png" id="18_hjxxa"]
[ext_resource type="Texture2D" uid="uid://cfmli6x02de6m" path="res://assets/entities/nova/nova_walking/nova_left_walk1.png" id="19_h6qey"]
[ext_resource type="Texture2D" uid="uid://cjowipm1qijq8" path="res://assets/entities/nova/nova_walking/nova_left_walk2.png" id="20_o0an7"]
[ext_resource type="Texture2D" uid="uid://byiow11k41hsd" path="res://assets/entities/nova/nova_walking/nova_up.png" id="21_m4goa"]
[ext_resource type="Texture2D" uid="uid://c5lbmspynuxuw" path="res://assets/entities/nova/nova_walking/nova_up_walk1.png" id="22_1o08w"]
[ext_resource type="Texture2D" uid="uid://cr7ar28mfbsrm" path="res://assets/entities/nova/nova_walking/nova_up_walk2.png" id="23_3bbqp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7wltb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a4ka7")
}, {
"duration": 1.0,
"texture": ExtResource("4_f1gha")
}, {
"duration": 1.0,
"texture": ExtResource("3_a4ka7")
}, {
"duration": 1.0,
"texture": ExtResource("5_47kky")
}],
"loop": true,
"name": &"crossbow_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_6q5y5")
}, {
"duration": 1.0,
"texture": ExtResource("7_epl3y")
}, {
"duration": 1.0,
"texture": ExtResource("6_6q5y5")
}, {
"duration": 1.0,
"texture": ExtResource("8_kmtlt")
}],
"loop": true,
"name": &"crossbow_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_td65m")
}, {
"duration": 1.0,
"texture": ExtResource("10_41goi")
}, {
"duration": 1.0,
"texture": ExtResource("9_td65m")
}, {
"duration": 1.0,
"texture": ExtResource("11_1tirn")
}],
"loop": true,
"name": &"crossbow_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_hyiue")
}, {
"duration": 1.0,
"texture": ExtResource("13_04tot")
}, {
"duration": 1.0,
"texture": ExtResource("12_hyiue")
}, {
"duration": 1.0,
"texture": ExtResource("14_1qc7q")
}],
"loop": true,
"name": &"crossbow_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_wk4q8")
}, {
"duration": 1.0,
"texture": ExtResource("16_8bw50")
}, {
"duration": 1.0,
"texture": ExtResource("15_wk4q8")
}, {
"duration": 1.0,
"texture": ExtResource("17_wwprg")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_hjxxa")
}, {
"duration": 1.0,
"texture": ExtResource("19_h6qey")
}, {
"duration": 1.0,
"texture": ExtResource("18_hjxxa")
}, {
"duration": 1.0,
"texture": ExtResource("20_o0an7")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_m4goa")
}, {
"duration": 1.0,
"texture": ExtResource("22_1o08w")
}, {
"duration": 1.0,
"texture": ExtResource("21_m4goa")
}, {
"duration": 1.0,
"texture": ExtResource("23_3bbqp")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g5e2g"]
height = 27.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e74t3"]
size = Vector2(0.1, 0.1)

[node name="nova" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_wapv4")
bullet_scene = ExtResource("2_1l2sp")
metadata/_edit_group_ = true

[node name="NovaAnimation" type="AnimatedSprite2D" parent="."]
top_level = true
z_index = 1
sprite_frames = SubResource("SpriteFrames_7wltb")
animation = &"crossbow_up"

[node name="NovaCollision" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("CapsuleShape2D_g5e2g")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RoomDetector" type="Area2D" parent="."]

[node name="RoomHitbox" type="CollisionShape2D" parent="RoomDetector"]
z_index = 1
shape = SubResource("RectangleShape2D_e74t3")

[node name="BowCooldown" type="Timer" parent="."]

[connection signal="area_entered" from="RoomDetector" to="." method="_on_room_detector_area_entered"]
[connection signal="timeout" from="BowCooldown" to="." method="_on_bow_cooldown_timeout"]
